--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ pre .chunk {
   <div class="slide" id="slide-1">
     <section class="slide-content"><h3 id="immutable-infrastructure-persistence">Immutable Infrastructure Persistence</h3>
 <h4 id="12factor-docker-paas-dokku-deis-and-fleet">12factor, Docker, PaaS (Dokku/Deis), and Fleet</h4>
-<h2 id="ian-blenke-ianblenke-ian-blenke-com-">Ian Blenke @ianblenke <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#x6f;&#58;&#x69;&#x61;&#110;&#64;&#98;&#108;&#101;&#110;&#x6b;&#x65;&#x2e;&#99;&#111;&#109;">&#x69;&#x61;&#110;&#64;&#98;&#108;&#101;&#110;&#x6b;&#x65;&#x2e;&#99;&#111;&#109;</a></h2>
+<h2 id="ian-blenke-ianblenke-ian-blenke-com-">Ian Blenke @ianblenke <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#105;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;">&#105;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;</a></h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
@@ -680,7 +680,7 @@ pre .chunk {
       <a href="http://twitter.com/@ianblenke">@ianblenke</a>
     </h3>
     <h3 class="url">
-      <a href="http://github.com/ianblenke/cleaver/immutable-infrastructure-persistence.md">http://github.com/ianblenke/cleaver/immutable-infrastructure-persistence.md</a>
+      <a href="http://github.com/ianblenke/immutable-infrastructure-persistence">http://github.com/ianblenke/immutable-infrastructure-persistence</a>
     </h3>
 </div>
 </section>
