--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ pre .chunk {
   <div class="slide" id="slide-1">
     <section class="slide-content"><h3 id="immutable-infrastructure-persistence">Immutable Infrastructure Persistence</h3>
 <h4 id="12factor-docker-paas-dokku-deis-and-fleet">12factor, Docker, PaaS (Dokku/Deis), and Fleet</h4>
-<h2 id="ian-blenke-ianblenke-ian-blenke-com-">Ian Blenke @ianblenke <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#105;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;">&#105;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;</a></h2>
+<h2 id="ian-blenke-ianblenke-ian-blenke-com-github-com-ianblenke">Ian Blenke @ianblenke <a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#105;&#97;&#110;&#64;&#x62;&#108;&#101;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;">&#105;&#97;&#110;&#64;&#x62;&#108;&#101;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;</a> github.com/ianblenke</h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
