--- a/index.html
+++ b/index.html
@@ -403,7 +403,9 @@ pre .chunk {
   <div class="slide" id="slide-1">
     <section class="slide-content"><h3 id="immutable-infrastructure-persistence">Immutable Infrastructure Persistence</h3>
 <h4 id="12factor-docker-paas-dokku-deis-and-fleet">12factor, Docker, PaaS (Dokku/Deis), and Fleet</h4>
-<h2 id="ian-blenke-ianblenke-ian-blenke-com-github-com-ianblenke">Ian Blenke @ianblenke <a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#105;&#97;&#110;&#64;&#x62;&#108;&#101;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;">&#105;&#97;&#110;&#64;&#x62;&#108;&#101;&#110;&#107;&#x65;&#46;&#99;&#111;&#109;</a> github.com/ianblenke</h2>
+<h2 id="ian-blenke-ianblenke-ian-blenke-com-github-com-ianblenke">Ian Blenke @ianblenke <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#x6f;&#x3a;&#x69;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#x6e;&#107;&#101;&#x2e;&#x63;&#x6f;&#x6d;">&#x69;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#x6e;&#107;&#101;&#x2e;&#x63;&#x6f;&#x6d;</a> github.com/ianblenke</h2>
+<h2 id="-http-goo-gl-fkhhra-http-goo-gl-fkhhra-qr-"><img src="http://goo.gl/fkHHRA.qr" alt="http://goo.gl/fkHHRA"></h2>
+<h2 id="http-goo-gl-fkhhra"><a href="http://goo.gl/fkHHRA">http://goo.gl/fkHHRA</a></h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
@@ -490,7 +492,7 @@ pre .chunk {
 </section>
   </div>
   <div class="slide hidden" id="slide-9">
-    <section class="slide-content"><h3 id="docker-contract-">Docker &quot;Contract&quot;</h3>
+    <section class="slide-content"><h3 id="docker">Docker</h3>
 <ul>
 <li>Images</li>
 <li>Volumes</li>
@@ -569,9 +571,11 @@ pre .chunk {
   <div class="slide hidden" id="slide-15">
     <section class="slide-content"><h3 id="issues-with-etcd">Issues with etcd</h3>
 <ul>
-<li>Disk latency currently causes flapping<h1 id="give-etcd-more-time-if-it-s-under-heavy-load-prevent-leader-election-thrashing">give etcd more time if it&#39;s under heavy load - prevent leader election thrashing</h1>
-  peer-election-timeout: 2000<h1 id="heartbeat-interval-should-ideally-be-1-4-or-1-5-of-peer-election-timeout">heartbeat interval should ideally be 1/4 or 1/5 of peer election timeout</h1>
-  peer-heartbeat-interval: 500</li>
+<li>Disk latency currently causes flapping<ul>
+<li><strong>peer-election-timeout: 2000</strong></li>
+<li><strong>peer-heartbeat-interval: 500</strong></li>
+</ul>
+</li>
 <li>Next major version of etcd will allow delayed writes</li>
 <li>Only 9 members will participate in leader election<ul>
 <li>If more than 4 of these are lost, quorum is lost, and etcd key/value store goes read-only</li>
@@ -598,10 +602,10 @@ pre .chunk {
 <li><a href="https://github.com/ianblenke/coreos-vagrant-kitchen-sink">ianblenke/coreos-vagrant-kitchen-sink</a></li>
 <li>Vagrant CoreOS with self-orchestrated:<ul>
 <li>Flannel (VPN)</li>
-<li>Kubernetes (Google&#39;s YAML based orchestration)</li>
+<li>Kubernetes (YAML based orchestration)</li>
 <li>libswarm (Docker API reverse proxy)</li>
-<li>Panamax (YAML based orchestration with web interface)</li>
-<li>Kibana / Logstash / Logspout / ElasticSearch (Logging)</li>
+<li>Panamax (YAML/web based orchestration)</li>
+<li>Kibana, Logstash, Logspout, ElasticSearch</li>
 <li>Heapster, Grafana, Influxdb, cadvisor</li>
 <li>Galera MySQL</li>
 <li>Zookeeper</li>
@@ -614,9 +618,12 @@ pre .chunk {
   <div class="slide hidden" id="slide-18">
     <section class="slide-content"><h3 id="data-in-flight-">Data &quot;in flight&quot;</h3>
 <ul>
+<li>If containers are stopped, their volumes disappear<ul>
+<li>Linked volumes allow for persistence and maintenance</li>
+</ul>
+</li>
 <li>Horizontally scaled persistence layer</li>
-<li>Multiple availability zones to prevent quorum loss
-*</li>
+<li>Multiple availability zones to prevent quorum loss</li>
 </ul>
 </section>
   </div>
@@ -629,6 +636,7 @@ pre .chunk {
 <li>Akin to the upgrade scripts in an distribution &quot;package&quot;</li>
 </ul>
 </li>
+<li>Waiting for a re-seed/mirror event to succeed before continuing is important</li>
 </ul>
 </section>
   </div>
@@ -680,7 +688,7 @@ pre .chunk {
       <a href="http://twitter.com/@ianblenke">@ianblenke</a>
     </h3>
     <h3 class="url">
-      <a href="http://github.com/ianblenke/immutable-infrastructure-persistence">http://github.com/ianblenke/immutable-infrastructure-persistence</a>
+      <a href="http://ianblenke.github.io/immutable-infrastructure-persistence">http://ianblenke.github.io/immutable-infrastructure-persistence</a>
     </h3>
 </div>
 </section>
