--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ pre .chunk {
   <div class="slide" id="slide-1">
     <section class="slide-content"><h3 id="immutable-infrastructure-persistence">Immutable Infrastructure Persistence</h3>
 <h4 id="12factor-docker-paas-dokku-deis-and-fleet">12factor, Docker, PaaS (Dokku/Deis), and Fleet</h4>
-<h2 id="ian-blenke-ianblenke-ian-blenke-com-github-com-ianblenke">Ian Blenke @ianblenke <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#x6f;&#x3a;&#x69;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#x6e;&#107;&#101;&#x2e;&#x63;&#x6f;&#x6d;">&#x69;&#x61;&#x6e;&#x40;&#98;&#x6c;&#x65;&#x6e;&#107;&#101;&#x2e;&#x63;&#x6f;&#x6d;</a> github.com/ianblenke</h2>
+<h2 id="ian-blenke-ianblenke">Ian Blenke @ianblenke</h2>
 <h2 id="-http-goo-gl-fkhhra-http-goo-gl-fkhhra-qr-"><img src="http://goo.gl/fkHHRA.qr" alt="http://goo.gl/fkHHRA"></h2>
 <h2 id="http-goo-gl-fkhhra"><a href="http://goo.gl/fkHHRA">http://goo.gl/fkHHRA</a></h2>
 </section>
@@ -675,10 +675,11 @@ pre .chunk {
   </div>
   <div class="slide hidden" id="slide-23">
     <section class="slide-content"><h3 id="any-questions-comments-">Any questions? Comments?</h3>
-<h2 id="ian-blenke">Ian Blenke</h2>
+<h2 id="ian-blenke-ianblenke-http-twitter-com-ianblenke-">Ian Blenke <a href="http://twitter.com/ianblenke">@ianblenke</a></h2>
 <h2 id="email-ian-at-blenke-com">email: ian at blenke.com</h2>
-<h2 id="-ianblenke-http-twitter-com-ianblenke-"><a href="http://twitter.com/ianblenke">@ianblenke</a></h2>
 <h2 id="github-com-ianblenke">github.com/ianblenke</h2>
+<h2 id="-http-goo-gl-fkhhra-http-goo-gl-fkhhra-qr-"><img src="http://goo.gl/fkHHRA.qr" alt="http://goo.gl/fkHHRA"></h2>
+<h2 id="this-presentation-http-goo-gl-fkhhra">This presentation: <a href="http://goo.gl/fkHHRA">http://goo.gl/fkHHRA</a></h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-24">
