--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@ Global=true</code></pre>
     <section class="slide-content"><h3 id="any-questions-comments-">Any questions? Comments?</h3>
 <h2 id="ian-blenke-ianblenke-http-twitter-com-ianblenke-">Ian Blenke <a href="http://twitter.com/ianblenke">@ianblenke</a></h2>
 <h2 id="email-ian-at-blenke-com">email: ian at blenke.com</h2>
+<h2 id="work-iblenke-at-malwarebytes-org">work: iblenke at malwarebytes.org</h2>
 <h2 id="github-com-ianblenke">github.com/ianblenke</h2>
 <h2 id="-http-goo-gl-fkhhra-http-goo-gl-fkhhra-qr-"><img src="http://goo.gl/fkHHRA.qr" alt="http://goo.gl/fkHHRA"></h2>
 <h2 id="this-presentation-http-goo-gl-fkhhra">This presentation: <a href="http://goo.gl/fkHHRA">http://goo.gl/fkHHRA</a></h2>
