--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ pre .chunk {
   <div class="slide" id="slide-1">
     <section class="slide-content"><h3 id="immutable-infrastructure-persistence">Immutable Infrastructure Persistence</h3>
 <h4 id="12factor-docker-paas-dokku-deis-and-fleet">12factor, Docker, PaaS (Dokku/Deis), and Fleet</h4>
-<h2 id="ian-blenke-ianblenke">Ian Blenke @ianblenke</h2>
+<h2 id="ian-blenke-ianblenke">Ian Blenke @ianblenke<br/>Senior DevOps Engineer, <a href="https://malwarebytes.org">Malwarebytes, Inc</a> &mdash; <a href="https://www.malwarebytes.org/careers/#positions">We're Hiring!</a></h2>
 <h2 id="-http-goo-gl-fkhhra-http-goo-gl-fkhhra-qr-"><img src="http://goo.gl/fkHHRA.qr" alt="http://goo.gl/fkHHRA"></h2>
 <h2 id="http-goo-gl-fkhhra"><a href="http://goo.gl/fkHHRA">http://goo.gl/fkHHRA</a></h2>
 </section>
@@ -755,7 +755,7 @@ Global=true</code></pre>
     <section class="slide-content"><h3 id="any-questions-comments-">Any questions? Comments?</h3>
 <h2 id="ian-blenke-ianblenke-http-twitter-com-ianblenke-">Ian Blenke <a href="http://twitter.com/ianblenke">@ianblenke</a></h2>
 <h2 id="email-ian-at-blenke-com">email: ian at blenke.com</h2>
-<h2 id="work-iblenke-at-malwarebytes-org">work: iblenke at malwarebytes.org</h2>
+<h2 id="work-iblenke-at-malwarebytes-org">work: iblenke at malwarebytes.org &mdash; <a href="https://www.malwarebytes.org/careers/#positions">Seriously, we're hiring</a></h2>
 <h2 id="github-com-ianblenke">github.com/ianblenke</h2>
 <h2 id="-http-goo-gl-fkhhra-http-goo-gl-fkhhra-qr-"><img src="http://goo.gl/fkHHRA.qr" alt="http://goo.gl/fkHHRA"></h2>
 <h2 id="this-presentation-http-goo-gl-fkhhra">This presentation: <a href="http://goo.gl/fkHHRA">http://goo.gl/fkHHRA</a></h2>
